--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>API Level 0 Example - Node.js</title>
+    <title>API Level 2 PIE.IO Test - Node.js</title>
 
     <link
       rel="stylesheet"
@@ -52,6 +52,16 @@
               class="form-control"
               id="name"
               placeholder="World"
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="text"
+              ref="password"
+              class="form-control"
+              id="password"
+              placeholder="Password"
             />
           </div>
           <button id="invoke" type="submit" class="btn btn-success">
