--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
           background-color:rgba(255,255,255,.4);
           border-style: solid;
           border-width: 1px;
-          border-color:whitesmoke;  
+          border-color:whitesmoke;
+          width: 80vw;
         }
         .bg {
             animation:slide 4s ease-in-out infinite alternate;
@@ -82,11 +83,11 @@
       <div class="card m-3" id="form_bg">
       <div>
         <img
-              alt="Go Free logo"
-              class="nav_logo"
-              src="./images/pie_io_clr_slgn_trns.png"
-              height="80"
-            />
+            alt="Go Free logo"
+            class="nav_logo"
+            src="./images/pie_io_clr_slgn_trns.png"
+            height= 300px;
+          />
 
         <h4 class="card-header" >Login</h4>
         <div class="card-body">
@@ -113,7 +114,7 @@
             />
           </div>
           <button id="invoke" type="submit" class="btn btn-success">
-            Invoke
+            Login
           </button>
         </form>
 
